--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 spring.profiles.active=DEV
-
 environment = COMMON
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/payroll_services
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/payroll_db
+spring.datasource.username=${PAYROLL_DB_USERNAME:payrolluser}
+spring.datasource.password=${PAYROLL_DB_PASSWORD:password}
 spring.jpa.hibernate.ddl-auto=update
