--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/payroll_db
 spring.datasource.username=${PAYROLL_DB_USERNAME:payrolluser}
 spring.datasource.password=${PAYROLL_DB_PASSWORD:password}
 spring.jpa.hibernate.ddl-auto=update
+server.port=8081
